--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -220,4 +220,11 @@ CodeCommit <=== Retrieve code CodeBuild ===>  build code Ready to deploy artifac
 3. Can edit the code "in the cloud" using **AWS Cloud9**.
 
 //IMPORTANT:
-//NOTE: So all of this makes CodeStar a Central Service that allows you developers to quickly start with development while using the best CI/CD practices..
+//NOTE: So all of this makes CodeStar a Central Service that allows you developers to quickly start with development while using the best CI/CD practices.
+
+# **Cloud 9**
+
+1. AWS Cloud9 is a cloud IDE (INTEGRATED DEVELOPMENT ENVIROMENT) FOR WRITING, RUNNING AND DEBUGGING CODE.
+2. "Classic" IDE (Like IntelliJ,Visual Studio Code...) are downloaded on a computer before being used.
+3. A cloud IDE can be used within a web browser, meaning you can work on your projects from your office, home, or anywhere with internet with no setup necessary.
+4. AWS Cloud9 also allows for code collaboration in real-time (pair programming).
