--- a/AWS-certified-Cloud-Practitioner/subjects/05.ELB&ASG.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/05.ELB&ASG.md
@@ -150,3 +150,5 @@ web traffic can be coming in through our load balancer, which will be redirectio
    b. Automatically provision the right number of EC2 instances in advance.
 
 4. Useful when your load has predictable time-based patterns.
+
+![Drag Racing](images/Pipeline_CodeStar.png)
