--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -228,3 +228,40 @@ CodeCommit <=== Retrieve code CodeBuild ===>  build code Ready to deploy artifac
 2. "Classic" IDE (Like IntelliJ,Visual Studio Code...) are downloaded on a computer before being used.
 3. A cloud IDE can be used within a web browser, meaning you can work on your projects from your office, home, or anywhere with internet with no setup necessary.
 4. AWS Cloud9 also allows for code collaboration in real-time (pair programming).
+
+# **HANDS ON**
+
+1. CodeStar
+
+2. Get started
+3. Create a project.
+4. Choose a project template
+5. Project name.
+6. EC2 Configuration (Instance Type) | VPC | Subnet | Key Pair.
+
+//NOTE: In case you don't have key pair , create a key pair.
+a key pair consist in a private key and public key, is a set of security credentials that you use to prove your identity when connecting to an instance.
+
+![Drag Racing](images/Pipeline_CodeStar.png)
+
+# **!! If we go to BeanStalk!!**
+
+**If we click in the link we can see the project in the web**
+
+![Drag Racing](images/ELASTIC_BEANSTALK.png)
+
+# **Next Step is Cloud9**
+
+This is going to give me an IDE, and if we click the IDE, we can see the enviroment,
+either using Cloud9 or CodeCommits or some tools that we can use locally.
+![Drag Racing](images/Cloud_9.png)
+
+**CREATING A CLOUD9**
+
+![Drag Racing](images/Creating_Cloud_9.png)
+
+**If we go to CloudFormation**
+
+We can see the process has been succed and is completed.
+
+![Drag Racing](images/Cloud_Formation_Stacks.png)
