--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -265,3 +265,28 @@ either using Cloud9 or CodeCommits or some tools that we can use locally.
 We can see the process has been succed and is completed.
 
 ![Drag Racing](images/Cloud_Formation_Stacks.png)
+
+# **AWS Systems Manager (SSM)**
+
+1.  Helps you manage your **EC2 and On-Premises** systems at scale.
+2.  Another **Hybrid** AWS Service.
+3.  Get operational insights about the state of your infrastructure.
+4.  Suite of 10+ products.
+5.  Most important features are:
+
+        1. Patching automation for enhanced compliance.
+        2. Run commands across an entire fleet of servers.
+        3. Store parameter configuration with SSM Parameter Store.
+
+6.  Works for both Windows and Linux OS.
+
+//IMPORTANT: If you wanted to run a command consistently across all your servers, again, SSM would be the right way.
+
+# **HOW SYSTEM MANAGER WORKS (SSM)**
+
+1. We need to install the SSM agent onto the systems we control.
+2. Installed by default on Amazon Linux AMI & some Ubuntu AMI.
+3. If an instance can't be controlled with SSM, it's probably an issue with the SSM agent!
+4. Thanks to the SSM agent, we can run commands, patch & confugure our servers.
+
+![Drag Racing](images/SSM.png)
