added SSM SESSION MANAGER

--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -290,3 +290,22 @@ We can see the process has been succed and is completed.
 4. Thanks to the SSM agent, we can run commands, patch & confugure our servers.
 
 ![Drag Racing](images/SSM.png)
+
+# **Systems Manager - SSM Session Manager**
+
+1. Allows you to start a secure shell on your EC2 and on-premises servers.
+2. No SSH access, bastion hosts, or SSH keys needed.
+3. No port 22 needed (better security).
+4. Supports Linux, macOS, and Windows.
+5. Send session log data to S3 or CloudWatch Logs.
+
+**HANDS ON**
+
+1. First , we need to launch an EC2 Instance.
+2. Amazon Linux 2 AMI (HVM), SSD VOLUME TYPE (select).
+3. We choose a t2.micro
+4. Select IAM role that has SSM access.
+5. Inside there you create a role (create role).
+6. In there search for (SSM) and you need to choose the (Amazon SSMManagedInstanceCore).
+7. NAME THE ROLE = DemoEC2RoleFOrSSM
+8. Create Role.
