added ops works

--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -309,3 +309,17 @@ We can see the process has been succed and is completed.
 6. In there search for (SSM) and you need to choose the (Amazon SSMManagedInstanceCore).
 7. NAME THE ROLE = DemoEC2RoleFOrSSM
 8. Create Role.
+
+# **OpsWorks**
+
+1.  Chef & Puppet help you perform server configuration automatically, or repetitive actions.
+2.  They work great with EC2 & ON-Premises VM.
+3.  AES OpsWorks = Managed Chef & Puppet.
+4.  It's an alternative to AWS SSM.
+5.  Only provision standar AWS resources:
+
+        1. EC2 Instances, Databases, Load Blancers, EBS Volumes ...
+
+6.  In the exam: Chef or puppet needed => AWS OpsWorks.
+
+![Drag Racing](images/ops_works_architecture.png)
