added Cloudfront vs S3 cross region replication

--- a/AWS-certified-Cloud-Practitioner/subjects/10.Leveraging-the-AWS-Global-Infrastructure.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/10.Leveraging-the-AWS-Global-Infrastructure.md
@@ -82,3 +82,41 @@ this help with disaster recovery.
 So the clients will know exactly thanks to Route 53, which instance to connect to based on the health of that instance.
 
 ![Drag Racing](images/routing-policies2.png)
+
+# **CLOUDFRONT**
+
+1. Content Delivery Network(CDN).
+2. Improves read performance, content is cached at the edge.
+3. Improves users experience.
+4. 216 Point of presence globally (edge locations).
+5. DDoS Protection (because worldwide), integration with shield, AWS Web Application Firewall.
+
+## **CLOUDFRONT ORIGINS**
+
+1.  S3 Bucket
+
+        - For distributing files and caching them at the edge.
+        - Enhanced security with CloudFront Origin Access Identity (OAI).
+        - CloudFront can be used as an ingress(to upload files to S3).
+
+2.  Custom Origin (HTTP):
+
+        - Application Load Balancer.
+        - EC2 Instance.
+        - S3 website(must first enable the bucket as a static S3 website).
+        - Any HTTP backend you want.
+
+## **CLOUDFRONT VS S3 CROSS REGION REPLICATION**
+
+1.  CloudFront:
+
+        - Global Edge network
+        - Files are cached for a TTL(maybe a day).
+        - Great for static content that must be available everywhere.
+
+2.  S3 CROSS REGION REPLICATION:
+
+        - Must be setup for each region you want replication to happen.
+        - Files are updated in near real-time.
+        - Read only.
+        - Great for dynamic content that needs to be available at low-latency in few regions.
